updated test files & lint

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,5 +26,8 @@ jobs:
         node-version: ${{ matrix.node-version }}
         cache: 'npm'
     - run: npm ci
-    - run: npm run build --if-present
+    - run: npm ci -g npx
+    - run: npm run e2e-test
+    - run: npm run eslint:github-action
     - run: npm test
+    - run: npm run build --if-present
