changed homepage in package.json

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-crud-seacrh-sample",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://github.com/raviabeypaul/React-CRUD-Seacrh-Sample",
+  "homepage":"https://raviabeypaul.github.io/react-crud-seacrh-sample",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
