updated package.json added playwright

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,4 +35,5 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - run: npx playwright install 
+    - run: npm run e2e-test
     - run: npm run eslint:github-action
