--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "coverage": "npm test -- --coverage",
     "eslint:github-action": "node ./node_modules/eslint/bin/eslint . --ignore-path .gitignore --max-warnings 0",
     "e2e-test": "npx playwright test",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
   "browserslist": {
