--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -35,5 +35,6 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - run: npx playwright install 
+    - run: npx playwright install-deps
     - run: npm run e2e-test
     - run: npm run eslint:github-action
