--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "react-crud-seacrh-sample",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://raviabeypaul.github.io/React-CRUD-Seacrh-Sample",
+  "homepage": "https://raviabeypaul.github.io/React-CRUD-Seacrh-Sample",
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "@forge/api": "^2.22.0",
     "@mui/icons-material": "^5.14.18",
     "@mui/material": "^5.14.18",
     "@mui/styled-engine-sc": "^6.0.0-alpha.6",
@@ -93,4 +94,4 @@
       "text"
     ]
   }
-  }
+}
