--- a/package.json
+++ b/package.json
@@ -51,7 +51,8 @@
     "eslint:github-action": "node ./node_modules/eslint/bin/eslint . --ignore-path .gitignore --max-warnings 0",
     "e2e-test": "npx playwright test",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "pm2-start" : "pm2 start --name `React Tutorial` -- start"
   },
   "browserslist": {
     "production": [
